[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/todo-cards/scenes/flags-grid.gd" type="Script" id=4]
[ext_resource path="res://addons/todo-cards/scenes/tasks.gd" type="Script" id=5]
[ext_resource path="res://addons/todo-cards/scenes/todo-card.gd" type="Script" id=6]
[ext_resource path="res://addons/todo-cards/scenes/text-edit.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.129412, 0.439216, 1, 1 )

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=4]
flags = 4
flags = 4
image = SubResource( 6 )
size = Vector2( 16, 16 )

[node name="TodoCard" type="PanelContainer"]
margin_right = 256.0
margin_bottom = 248.0
rect_min_size = Vector2( 256, 0 )
mouse_filter = 1
size_flags_vertical = 0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 252.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagsGrid" type="GridContainer" parent="VBox"]
margin_right = 248.0
script = ExtResource( 4 )

[node name="Label" type="HBoxContainer" parent="VBox"]
margin_top = 4.0
margin_right = 248.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="VBox/Label"]
margin_right = 216.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
text = "New Card"
max_length = 25
caret_blink = true
caret_blink_speed = 0.5

[node name="MenuButton" type="MenuButton" parent="VBox/Label"]
margin_left = 220.0
margin_right = 248.0
margin_bottom = 36.0
focus_mode = 2
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
icon = SubResource( 4 )
items = [ "    Actions list    ", null, 0, false, false, -1, 0, null, "", true, "Add Flag", null, 0, false, false, 0, 0, null, "", false, "Import", null, 0, false, false, 1, 0, null, "", false, "Export", null, 0, false, false, 2, 0, null, "", false, "Delete Card", null, 0, false, false, 3, 0, null, "", false ]

[node name="Comment" type="HBoxContainer" parent="VBox"]
margin_top = 44.0
margin_right = 248.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Panel" type="PanelContainer" parent="VBox/Comment"]
margin_right = 248.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBox/Comment/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 128 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/symbol_color = Color( 0, 0, 0, 1 )
text = "# comment"
syntax_highlighting = true
show_line_numbers = true
virtual_keyboard_enabled = false
smooth_scrolling = true
v_scroll_speed = 40.0
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 8 )

[node name="TasksContainer" type="VBoxContainer" parent="VBox"]
margin_top = 196.0
margin_right = 248.0
margin_bottom = 240.0
script = ExtResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="VBox/TasksContainer"]
margin_right = 248.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
rounded = true

[node name="Tasks" type="VBoxContainer" parent="VBox/TasksContainer"]
margin_top = 20.0
margin_right = 248.0
margin_bottom = 20.0
custom_constants/separation = 4

[node name="AddButton" type="Button" parent="VBox/TasksContainer"]
margin_top = 24.0
margin_right = 248.0
margin_bottom = 44.0
text = "add a task"
